# pandoc-ui

./: .gitignore  BUILD.md  CLAUDE.md  README.md  STRIP_QUICK_START.md  pyproject.toml
.cursor/rules/: pyside.mdc
docs/: APPIMAGE_GUIDE.md  BUILD_OPTIMIZATION_GUIDE.md  BUILD_TROUBLESHOOTING.md  CLAUDE_LOG.md  PRD.md  STRIP_COMPRESSION_RESEARCH.md  STRUCTURE.md  TODOS.md
examples/: article.md
installer/: pandoc-ui-installer.nsi
pandoc_ui/: __init__.py  main.py  models.py
pandoc_ui/app/: __init__.py  conversion_service.py  folder_scanner.py  profile_repository.py  task_queue.py
pandoc_ui/gui/: __init__.py  command_preview.py  conversion_worker.py  main_window.py  main_window.ui  ui_components.py
pandoc_ui/i18n/: __init__.py
pandoc_ui/infra/: __init__.py  config_manager.py  format_manager.py  pandoc_detector.py  pandoc_runner.py  settings_store.py  translation_manager.py
pandoc_ui/locales/de_DE/LC_MESSAGES/: pandoc_ui.po
pandoc_ui/locales/es_ES/LC_MESSAGES/: pandoc_ui.po
pandoc_ui/locales/fr_FR/LC_MESSAGES/: pandoc_ui.po
pandoc_ui/locales/ja_JP/LC_MESSAGES/: pandoc_ui.po
pandoc_ui/locales/ko_KR/LC_MESSAGES/: pandoc_ui.po
pandoc_ui/locales/zh_CN/LC_MESSAGES/: pandoc_ui.po
pandoc_ui/locales/zh_TW/LC_MESSAGES/: pandoc_ui.po
pandoc_ui/resources/: resources.qrc  resources_rc.py
pandoc_ui/translations/: pandoc_ui_de_DE.ts  pandoc_ui_en_US.ts  pandoc_ui_es_ES.ts  pandoc_ui_fr_FR.ts  pandoc_ui_ja_JP.ts  pandoc_ui_ko_KR.ts  pandoc_ui_zh_CN.ts  pandoc_ui_zh_TW.ts  translations.json
pandoc_ui/translations/backup/: pandoc_ui_de_DE.ts  pandoc_ui_es_ES.ts  pandoc_ui_fr_FR.ts  pandoc_ui_ja_JP.ts  pandoc_ui_ko_KR.ts  pandoc_ui_zh_CN.ts  pandoc_ui_zh_TW.ts
resources/: pandoc-ui.desktop
scripts/: AppImageBuilder.yml  README_APPIMAGE.md  README_STRIP.md  build.sh  build_appimage.sh  build_appimage_builder.sh  build_installer.ps1  build_simple_appimage.sh  build_with_strip.sh  debug_build.sh  debug_windows_pandoc.py  demo_cli.py  extract_translations.py  format.ps1  format.sh  generate_icons.ps1  generate_icons.sh  generate_resources.ps1  generate_resources.sh  generate_translations.ps1  generate_translations.sh  generate_translations_simple.sh  integrity_validator.py  lint.ps1  lint.sh  macos_build.sh  macos_build_dmg.sh  reset_translations.sh  run_gui.py  run_lupdate.py  strip_benchmark.py  strip_demo.sh  strip_manager.sh  strip_optimize.ps1  strip_optimize.sh  strip_rollback_manager.py  test_appimage.sh  test_gui.ps1  test_gui.sh  test_nuitka_simple.sh  (+2 more)
scripts/macos/: README_BACKGROUND.md  dmg_settings.py  pandoc-ui.spec
scripts/templates/: AppRun.template  desktop.template
tests/: __init__.py  conftest.py  test_batch_performance.py  test_config_manager.py  test_conversion_service.py  test_folder_scanner.py  test_pandoc_detector.py  test_pandoc_runner.py  test_phase4_acceptance.py  test_phase6_improvements_summary.py  test_phase6_integration.py  test_profile_repository.py  test_settings_store.py
tests/fixtures/batch_test/: doc_01.md  doc_02.md  doc_03.md  doc_04.md  doc_05.md  doc_06.md  doc_07.md  doc_08.md  doc_09.md  doc_10.md  readme.txt
tests/fixtures/batch_test/subdir/: sub_01.md  sub_02.md
tests/gui/: test_conversion_worker_simple.py  test_ui_components.py
tests/integration/: test_end_to_end.py  test_gui_integration.py
tests/screenshot/: .gitignore
